--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
 
-fox reset cross on map page
+fix  deleting maps (now it works like delete favorites)
 fix tooltips on listings -  use another solucion then in funcions.php line 2281
